# imfia-experiments

./: .gitignore  README.md  pyproject.toml
research/: 20250505_open_mxf.py  20250505_play.py
